+ обновил оформление (цвета, иконка)
+ доработал настройки:
  + путь к хранилищу отображается теперь с нормальными русскими символами
  + "Настройки сохранены" теперь в Snackbar

+ доработал открытие файла после сохранения, теперь в obsidian передается название хранилища (vault)

+ в tags, title заменяются запрещенные символы перед сохранением

+ названия файла теперь более корректно чистится

--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text=""
-                android:textColor="#00796B"
+                android:textColor="@color/notification_text"
                 android:visibility="gone" />
 
     </LinearLayout>
