--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -44,7 +44,7 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="2. Папка внутри vault (опционально):"
+                android:text="2. Папка внутри Vault для ссылок-заметок:"
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="8dp" />
 
@@ -68,6 +68,64 @@
                 android:textSize="12sp"
                 android:layout_marginTop="4dp"
                 android:textColor="#888" />
+
+        <!-- Ввод названия тега -->
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3. Тег для созданых заметок (опционально):"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="8dp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Например: cсылки">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editTags"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+                android:id="@+id/tvTags"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Будет назначаться тег: [тег]/[хост сайта-источника]"
+                android:textSize="12sp"
+                android:layout_marginTop="4dp"
+                android:textColor="#888" />
+
+        <!-- Ввод относительной папки для вложений -->
+<!--        <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="4. Папка для сохранения картинок (опционально):"-->
+<!--                android:layout_marginTop="24dp"-->
+<!--                android:layout_marginBottom="8dp" />-->
+
+<!--        <com.google.android.material.textfield.TextInputLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:hint="Например: __вложения">-->
+
+<!--            <com.google.android.material.textfield.TextInputEditText-->
+<!--                    android:id="@+id/editAttachmentsFolder"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:inputType="text" />-->
+
+<!--        </com.google.android.material.textfield.TextInputLayout>-->
+<!--        <TextView-->
+<!--                android:id="@+id/tvAttachmentsFolder"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Будет сохранять в: [Vault]/[Ссылки]/[__вложения]"-->
+<!--                android:textSize="12sp"-->
+<!--                android:layout_marginTop="4dp"-->
+<!--                android:textColor="#888" />-->
 
         <!-- Кнопка сохранения -->
         <Button
