--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -80,7 +80,7 @@
         <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Например: cсылки">
+                android:hint="Например: cсылка">
 
             <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editTags"
